--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
     "tailwindcss": "^3.4.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
